--- a/migrations/README
+++ b/migrations/README
@@ -1,5 +1,7 @@
-Generic single-database configuration with an async dbapi.
 
 alembic revision --autogenerate -m "Comment"
 
 alembic upgrate head
+
+openssl genrsa -out jwt-private.pem 2048
+openssl rsa -in jwt-private.pem -outform PEM -pubout -out jwt-public.pem
