--- a/migrations/README
+++ b/migrations/README
@@ -1,7 +1,7 @@
 
 alembic revision --autogenerate -m "Comment"
 
-alembic upgrate head
+alembic upgrade head
 
 openssl genrsa -out jwt-private.pem 2048
 openssl rsa -in jwt-private.pem -outform PEM -pubout -out jwt-public.pem
