--- a/migrations/README
+++ b/migrations/README
@@ -5,3 +5,5 @@ alembic upgrade head
 
 openssl genrsa -out jwt-private.pem 2048
 openssl rsa -in jwt-private.pem -outform PEM -pubout -out jwt-public.pem
+
+uvicorn main:app --reload
